--- a/public/index.html
+++ b/public/index.html
@@ -1,38 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8"/>
-  <meta
-          content="width=device-width, initial-scale=1, shrink-to-fit=no"
-          name="viewport"
-  />
-  <meta content="#000000" name="theme-color"/>
-  <!--
-    manifest.json provides metadata used when your web app is added to the
-    homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
-  -->
-  <link href="%PUBLIC_URL%/manifest.json" rel="manifest"/>
-  <link href="%PUBLIC_URL%/favicon.ico" rel="shortcut icon"/>
-  <!-- CUSTOM FONT: Open Sans-->
-  <link
-          href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap"
-          rel="stylesheet"
-  />
-  <!--
-    Notice the use of %PUBLIC_URL% in the tags above.
-    It will be replaced with the URL of the `public` folder during the build.
-    Only files inside the `public` folder can be referenced from the HTML.
+    <meta charset="utf-8"/>
+    <meta
+            content="width=device-width, initial-scale=1, shrink-to-fit=no"
+            name="viewport"
+    />
+    <meta content="#000000" name="theme-color"/>
+    <!--
+      manifest.json provides metadata used when your web app is added to the
+      homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
+    -->
+    <link href="%PUBLIC_URL%/manifest.json" rel="manifest"/>
+    <link href="%PUBLIC_URL%/favicon.ico" rel="shortcut icon"/>
+    <!-- CUSTOM FONT: Open Sans-->
+    <link
+            href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap"
+            rel="stylesheet"
+    />
+    <!--
+      Notice the use of %PUBLIC_URL% in the tags above.
+      It will be replaced with the URL of the `public` folder during the build.
+      Only files inside the `public` folder can be referenced from the HTML.
 
-    Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-    work correctly both with client-side routing and a non-root public URL.
-    Learn how to configure a non-root public URL by running `npm run build`.
-  -->
-  <title>Onion's Weather</title>
+      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
+      work correctly both with client-side routing and a non-root public URL.
+      Learn how to configure a non-root public URL by running `npm run build`.
+    -->
+    <title>Onion's Weather</title>
 </head>
 
 <body>
 <noscript>
-  You need to enable JavaScript to run this app.
+    You need to enable JavaScript to run this app.
 </noscript>
 <div id="root"></div>
 <!--
@@ -45,5 +45,18 @@
   To begin the development, run `npm start` or `yarn start`.
   To create a production bundle, use `npm run build` or `yarn build`.
 -->
+<script>
+    function initMap() {
+        var map
+        // TODO ADD MAP
+        // map = new google.maps.Map(document.getElementById('map'), {
+        //     center: {lat: -34.397, lng: 150.644},
+        //     zoom: 8
+        // })
+    }
+</script>
+<script async
+        defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8OV80O5v5ZCZMjHg4D620lYvOhNrBrkU&callback=initMap"></script>
 </body>
 </html>
