--- a/public/index.html
+++ b/public/index.html
@@ -45,18 +45,8 @@
   To begin the development, run `npm start` or `yarn start`.
   To create a production bundle, use `npm run build` or `yarn build`.
 -->
-<script>
-    function initMap() {
-        var map
-        // TODO ADD MAP
-        // map = new google.maps.Map(document.getElementById('map'), {
-        //     center: {lat: -34.397, lng: 150.644},
-        //     zoom: 8
-        // })
-    }
-</script>
 <script async
         defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8OV80O5v5ZCZMjHg4D620lYvOhNrBrkU&callback=initMap"></script>
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8OV80O5v5ZCZMjHg4D620lYvOhNrBrkU"></script>
 </body>
 </html>
