--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <meta
-            content="width=device-width, initial-scale=1, shrink-to-fit=no"
-            name="viewport"
-    />
+    <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport"/>
     <meta content="#000000" name="theme-color"/>
     <!--
       manifest.json provides metadata used when your web app is added to the
@@ -13,6 +10,7 @@
     -->
     <link href="%PUBLIC_URL%/manifest.json" rel="manifest"/>
     <link href="%PUBLIC_URL%/favicon.ico" rel="shortcut icon"/>
+
     <!-- CUSTOM FONT: Open Sans-->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300&display=swap" rel="stylesheet">
     <!--
